# random-user-agent

./: .detaignore  .gitignore  .spaceignore  Cargo.toml  README.md  Spacefile  main.py  pyproject.toml  ua.txt
.deta/: prog_info  state
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: deploy.yml  test.yml  tests.yml
deployment/: .spaceignore  Spacefile
res/: user_agents.txt
src/: config.py  config.rs  main.py  main.rs  middleware.rs  models.py  routes.rs  utils.rs
tests/: conftest.py  test_app.py
