[tool.poetry]
name = "random-user-agent"
version = "1.0.0"
description = "Simple 🚀 API that get random user-agent on each GET request!"
authors = ["somespecialone <Tkachenkodmitriy@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
requests = "^2.27.1"
black = "*"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
