[tool.poetry]
name = "random-user-agent"
version = "1.0.3"
description = "Simple 🚀 API that get random user-agent on each GET request!"
authors = ["Dmytro Tkachenko <tkachenkodmitriy@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.5"
fastapi = "^0.89.0"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.17.5"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
httpx = "^0.23.1"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
